--- a/style.css
+++ b/style.css
@@ -50,12 +50,6 @@ body {
     background-color: #352bf8;
   }
   
-  @media screen and (max-width: 500px) {
-    .navbar a {
-      float: none;
-      display: block;
-    }
-  }
 
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -151,10 +145,6 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 
-
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
 .cal{
     width: 100%;
     height: 120vh;
@@ -398,4 +388,46 @@ img {vertical-align: middle;}
 }
 .copyright i{
   color: #3399ff;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+  .prev, .next,.text {font-size: 8px}
+  .slideshow-container{
+    max-width: 450px;
+  }
+  .form-group{
+    max-width: 450px;
+  }
+  .container .form-group .text-center{
+    font-size: 15px;
+  }
+  #form{
+    max-width: 450px;
+    height:700px;
+    padding:9px;
+  }
+  .navbar img{
+    width: 60px;
+    height: 60px;
+  }
+
+  nav a{
+    background: #3399ff;
+    position: relative;
+    top: 0;
+    right: -200px;
+    width: 150px;
+    height: 5vh;
+    padding-top: 50px;
+    display: none;
+    margin: 25px;
+    z-index: 2;
+  }
+
+
 }
